[tool.poetry]
name = "scrape"
version = "0.1.0"
description = "A tool to get a list of papers that cite a root paper"
authors = ["Edoardo Marangoni <ecmm@anche.no>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
